--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,34 +1,25 @@
 <div class="container">
 
-  <div>
-    <acme-navbar creation-date="main.creationDate"></acme-navbar>
-  </div>
-
-  <div class="jumbotron text-center">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">
-      <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
-      Always a pleasure scaffolding your apps.
-    </p>
-    <p class="animated infinite" ng-class="main.classAnimation">
-      <button type="button" class="btn btn-lg btn-success" ng-click="main.showToastr()">Splendid Toastr</button>
-    </p>
-    <p>
-      With ♥ thanks to the contributions of<acme-malarkey extra-values="['Yeoman', 'Gulp', 'Angular']"></acme-malarkey>
-    </p>
-  </div>
-
   <div class="row">
-    <div class="col-sm-6 col-md-4" ng-repeat="awesomeThing in main.awesomeThings | orderBy:'rank'">
-      <div class="thumbnail">
-        <img class="pull-right" ng-src="assets/images/{{ awesomeThing.logo }}" alt="{{ awesomeThing.title }}">
-        <div class="caption">
-          <h3>{{ awesomeThing.title }}</h3>
-          <p>{{ awesomeThing.description }}</p>
-          <p><a ng-href="{{awesomeThing.url}}">{{ awesomeThing.url }}</a></p>
+
+    <form class="form text-center">
+      <div class="col-sm-10">
+        <div class="form-group">
+          <a href="https://en.wikipedia.org/wiki/Special:Random" role="button" class="btn btn-default btn-circle">Get a Random Wikipedia Article</a>
+        </div>
+
+        <div class="form-group">
+
+          <input type="text" class="form-control btn-circle" id="search" placeholder="Search Wikipedia for..">
+
+        </div>
+        <div class="form-group">
+
+          <button type="submit" class="btn btn-default btn-circle">Search Wikipedia</button>
+
+
         </div>
       </div>
-    </div>
+    </form>
   </div>
-
 </div>
