--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -28,7 +28,7 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
 }
 
 body {
-  background:transparent url('/assets/images/bubbles.jpg') left top no-repeat;
+//  background:transparent url('/assets/images/bubbles.jpg') left top;
   font-family: 'Bubblegum Sans', cursive;
 }
 
